--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="./newFolder.js" defer></script>
+    <link rel="icon" href="./multimedia/Logo sin letras.png" type="image/png">
     <title>SysPro Notes</title>
 </head>
 <body>
