--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=10">
     <link rel="stylesheet" href="main.css">
-    <script src="./newFolder.js" defer></script>
     <link rel="icon" href="./multimedia/Logo sin letras.png" type="image/png">
     <title>SysPro Notes</title>
 </head>
@@ -13,7 +12,13 @@
        <img class="logo" src="./multimedia/Logo(sin fondo).png">
     </header>
     <main>
-        <button id="crearCarpetaBtn">Crear Carpeta</button>
+        <div class="folders">Sistemas</div>
+        <div class="folders">Redes</div>
+        <div class="folders">Python</div>
+        <div class="folders">HTML,CSS</div>
+        <div class="folders">JavaScript</div>
+        <div class="folders">C,C++,C#</div>
+        <div class="folders">Hacking</div>
     </main>
     <footer>
         <p>&copy; SysPro Notes</p>
