--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=10">
-    <link rel="stylesheet" href="./main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <link rel="icon" href="./multimedia/Logo sin letras.png" type="image/png">
     <title>SysPro Notes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Handjet:wght@300&family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
