--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="icon" href="./multimedia/Logo sin letras.png" type="image/png">
     <title>SysPro Notes</title>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Handjet:wght@300&family=Lobster&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
        <img class="logo" src="./multimedia/Logo(sin fondo).png">
     </header>
     <main>
-        <div class="folders">Sistemas</div>
-        <div class="folders">Redes</div>
-        <div class="folders">Python</div>
-        <div class="folders">HTML,CSS</div>
-        <div class="folders">JavaScript</div>
-        <div class="folders">C,C++,C#</div>
-        <div class="folders">Hacking</div>
+        <a class="folders" href="./sistemas/sistemas.html">Sistemas</a>
+        <a class="folders" href="./redes/redes.html">Redes</a>
+        <a class="folders" href="./python/python.html">Python</a>
+        <a class="folders" href="./marcas/marcas.html">HTML,CSS</a>
+        <a class="folders" href="./javascript/javascript.html">JavaScript</a>
+        <a class="folders" href="./c/c.html">C,C++,C#</a>
+        <a class="folders" href="./hacking/hacking.html">Hacking</a>
     </main>
     <footer>
         <p>&copy; SysPro Notes</p>
