--- a/sistemas/sistemas.html
+++ b/sistemas/sistemas.html
@@ -1,1 +1,30 @@
-coming soon...
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./sistemas.css">
+    <title>Asignatura - Informática</title>
+</head>
+<body>
+    <header>
+        <h1>Sistemas</h1>
+    </header>
+    <main>
+        <div class="upload-section">
+            <h2>Subir Documento</h2>
+            <input type="file" accept=".py, .docx, .pdf" />
+            <button>Subir</button>
+        </div>
+        <div class="documents-section">
+            <h2>Documentos Subidos</h2>
+            <ul class="document-list">
+            </ul>
+        </div>
+        <script src="./uploadDoc.js"></script>
+    </main>
+    <footer>
+        <p>&copy; SysPro Notes</p>
+    </footer>
+</body>
+</html>
